<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMapRemindActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:paddingTop="4dp"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_title_reminder_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp">

            <EditText
                android:id="@+id/add_title_reminder_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/title_reminder"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_name_place_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp">

            <EditText
                android:id="@+id/add_name_place_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/place_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:text="@string/choose_place_on_map_tv"
            android:textColor="@color/colorTranslucentBlack"
            android:textSize="18sp" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="8dp">

        </com.google.android.gms.maps.MapView>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_short_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            app:counterEnabled="true"
            app:counterMaxLength="120"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/add_short_description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/short_description_reminder"
                android:maxLines="3"
                android:minLines="3" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:elevation="2dp"
        android:paddingHorizontal="16dp"
        android:text="@string/clear_reminder"
        android:textColor="@color/colorButtonText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:elevation="2dp"
        android:paddingHorizontal="16dp"
        android:text="@string/save_reminder"
        android:textColor="@color/colorButtonText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>